--- a/src/Test.css
+++ b/src/Test.css
@@ -1,6 +1,8 @@
 .testContainer {
   background-color: #0f0f0f;
   width: 100%;
-  height: 300px;
+  height: 400px;
   padding: 20px;
+  display: flex;
+  gap: 100px;
 }
