--- a/src/Test.css
+++ b/src/Test.css
@@ -1,7 +1,12 @@
-.testContainer {
+.test {
   background-color: #0f0f0f;
   width: 100%;
-  height: 400px;
+  height: 100%;
+}
+.testContainer1,
+.testContainer2 {
+  width: 100%;
+  height: 300px;
   padding: 20px;
   display: flex;
   gap: 100px;
