--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,16 +1,17 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap");
 
+/* Reset 전역 스타일 */
 * {
   box-sizing: border-box;
-  font-family: "Pretendard", sans-serif;
+  font-family: "Noto Sans KR", "Pretendard", sans-serif;
   margin: 0px;
   padding: 0px;
-  white-space: nowrap; /* 글자 넘침 시 처리 방식 */
+  white-space: nowrap;
   text-align: center;
   vertical-align: bottom;
 }
 
-/* Link로 스타일링 되는 a태그 기본값 설정 */
 a {
   text-decoration: none;
   color: inherit;
@@ -18,7 +19,6 @@ a {
   font-weight: inherit;
 }
 
-/* li 태그 사용 시 앞에 붙는 스타일 제거 */
 li {
   list-style: none;
 }
