--- a/src/pages/test_page/Test.css
+++ b/src/pages/test_page/Test.css
@@ -6,8 +6,9 @@
 .testContainer1,
 .testContainer2 {
   width: 100%;
-  height: 300px;
+  height: 350px;
   padding: 20px;
-  display: flex;
-  gap: 100px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
 }
