--- a/src/components/imgcard_exchange/ImgCardExchange.module.css
+++ b/src/components/imgcard_exchange/ImgCardExchange.module.css
@@ -45,7 +45,27 @@
   font-weight: 400;
   color: #a4a4a4;
   padding-left: 10px;
+  padding-right: 10px;
   border-left: 1px solid #5a5a5a;
+}
+.cardPrice {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+.price {
+  font-size: 18px;
+  font-weight: 400;
+  color: #ffffff;
+  letter-spacing: 4px;
+  padding-left: 10px;
+  border-left: 1px solid #5a5a5a;
+}
+.priceDesc {
+  font-size: 16px;
+  font-weight: 300;
+  padding-left: 4px;
+  color: #a4a4a4;
 }
 .cardNickname {
   font-weight: 400;
@@ -65,45 +85,16 @@
 .legendary {
   color: #ff2a6a;
 }
-.cardPrice {
+.cardDescription {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  padding-top: 20px;
-  margin-bottom: 10px;
-}
-.priceName {
-  font-size: 16px;
-  font-weight: 300;
-  color: #a4a4a4;
-}
-.price {
-  font-size: 18px;
-  font-weight: 400;
   color: #ffffff;
-  letter-spacing: 4px;
-}
-.cardCounts {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-.countsName {
-  font-size: 16px;
-  font-weight: 300;
-  color: #a4a4a4;
-}
-.counts {
-  font-size: 18px;
-  font-weight: 400;
-  color: #ffffff;
-  letter-spacing: 4px;
-}
-.logoImage {
-  width: 100px;
-  height: 18px;
-  margin-left: 50%;
-  transform: translate(-50%, 0);
+  margin-top: 20px;
+  white-space: normal;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 @media (max-width: 1199px) {
   .imgCard {
@@ -132,8 +123,5 @@
   .countsName,
   .counts {
     font-size: 10px;
-  }
-  .logoImage {
-    display: none;
   }
 }
