--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -124,9 +124,9 @@
 
   .nav_item_container {
     display: flex;
-    width: 241px; /* 코드잇 피그마 스케일 281px*/
+    width: 201px; /* 코드잇 피그마 스케일 281px*/
     height: 24px;
-    gap: 20px; /* 코드잇 피그마 스케일 30px*/
+    gap: 10px; /* 코드잇 피그마 스케일 30px*/
 
     box-sizing: border-box;
     padding-top: 2px;
@@ -197,13 +197,12 @@
     align-items: center;
 
     width: 100%;
-    max-width: 574px;
-    height: 60px;
+    max-width: 374px;
+    height: 22px;
 
     background-color: #0f0f0f;
 
     box-sizing: border-box;
-    padding: 19px 20px;
   }
   .nav_item_menu {
     width: 22px;
@@ -246,4 +245,47 @@
   .nav_item_container.notLogin {
     display: none;
   }
+}
+.nav_myPage_Wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: 70px;
+
+  box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  background-color: #0f0f0f;
+}
+.nav_myPage_Container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  max-width: 335px;
+  height: 22px;
+
+  background-color: #0f0f0f;
+
+  box-sizing: border-box;
+
+  position: relative;
+}
+
+.nav_myPage_back {
+  width: 22px;
+  height: 22px;
+  top: 0;
+  left: 0;
+
+  position: absolute;
+}
+
+.nav_myPage_logo {
+  width: 83.37px;
+  height: 15.12px;
 }
