--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,6 +1,10 @@
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap');
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap");
 
+@font-face {
+  font-family: "BR B";
+  src: url("../fonts/배스킨라빈스\ B.ttf");
+}
 
 /* Reset 전역 스타일 */
 * {
