--- a/src/components/commons/dropdown_input/DropdownInput.module.css
+++ b/src/components/commons/dropdown_input/DropdownInput.module.css
@@ -19,6 +19,7 @@
   border: 1px solid #ffffff;
   border-radius: 2px;
   width: var(--desktop-width); /* 데스크탑 사이즈*/
+  height: var(--desktop-height); /* 데스크탑 높이 */
   height: 60px;
   background-color: #0f0f0f;
   color: #ffffff;
@@ -65,7 +66,7 @@
   }
   .dropdownButton {
     width: var(--tablet-width); /* 태블릿 사이즈*/
-    height: 55px;
+    height: var(--tablet-height); /* 태블릿 높이 */
   }
   .dropdownMenu {
     width: var(--tablet-width); /* 태블릿 사이즈*/
@@ -76,6 +77,7 @@
 @media (max-width: 743px) {
   .dropdownButton {
     width: var(--mobile-width); /* 태블릿 사이즈*/
+    height: var(--mobile-height); /* 모바일 높이 */
   }
   .dropdownMenu {
     width: var(--mobile-width); /* 태블릿 사이즈*/
