Modify: 수량 조절바 미디어 쿼리 적용 > 폰트 크기

--- a/src/components/commons/quantity_control/QuantityControl.module.css
+++ b/src/components/commons/quantity_control/QuantityControl.module.css
@@ -34,3 +34,14 @@
 .container:hover {
   background-color: #0f0f0f;
 }
+
+@media (max-width: 744px) {
+  .container {
+    width: 144px;
+  }
+
+  .quantity {
+    font-size: 1.125rem;
+  }
+  
+}
