--- a/src/components/commons/dropdown_normal/DropdownNormal.module.css
+++ b/src/components/commons/dropdown_normal/DropdownNormal.module.css
@@ -9,7 +9,7 @@
   border: none;
   width: var(--desktop-width);
   height: var(--desktop-height);
-  background-color: #0f0f0f;
+  background-color: inherit;
   color: #ffffff;
   font-size: 16px;
   font-weight: 700;
@@ -35,6 +35,7 @@
 }
 .dropdownMenu {
   color: #ffffff;
+  background-color: #161616;
   border: 1px solid #ffffff;
   border-radius: 2px;
   padding: 15px 20px;
@@ -66,7 +67,7 @@
   border-radius: 2px;
   width: var(--desktop-width);
   height: var(--desktop-height);
-  background-color: #0f0f0f;
+  background-color: inherit;
   color: #ffffff;
   font-size: 16px;
   font-weight: 700;
