--- a/src/components/modals/photo_exchange/PhotoExchange.module.css
+++ b/src/components/modals/photo_exchange/PhotoExchange.module.css
@@ -13,7 +13,6 @@
 .modalContent {
   position: relative;
   width: 1160px;
-  max-width: 90%;
   background-color: #161616;
   padding: 60px 120px;
   border-radius: 2px;
@@ -70,4 +69,10 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 40px;
   overflow-y: auto; /*임시 세로 스크롤*/
+}
+@media (max-width: 1199px) {
+  .modalContent {
+    padding: 15px 20px;
+    width: 100vw;
+  }
 }
