--- a/src/components/modals/photo_exchange/PhotoExchange.module.css
+++ b/src/components/modals/photo_exchange/PhotoExchange.module.css
@@ -44,6 +44,7 @@
   font-size: 24px;
   font-weight: 400;
   font-family: "BR B";
+  text-align: start;
 
   margin-bottom: 40px;
   &:hover {
@@ -69,6 +70,9 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 40px;
   overflow-y: auto; /*임시 세로 스크롤*/
+  &:hover {
+    cursor: pointer;
+  }
 }
 @media (max-width: 1199px) {
   .modalContent {
