--- a/src/components/commons/btn/PrimaryBtnAnother.module.css
+++ b/src/components/commons/btn/PrimaryBtnAnother.module.css
@@ -39,10 +39,14 @@
 
 @media (max-width: 744px) {
   .large {
-    font-size: 18px;
+    font-size: 1.125rem;
   }
   
   .medium {
-    font-size: 16px;
+    font-size: 1rem;
+  }
+
+  .small {
+    font-size: 0.875rem;
   }
 }
