feat: photoSelling 모달 작성 // 스크롤 및 태블릿, 모바일 사이즈 미완성

--- a/src/components/commons/dropdown_input/DropdownInput.module.css
+++ b/src/components/commons/dropdown_input/DropdownInput.module.css
@@ -42,6 +42,8 @@
 .dropdownMenu {
   width: var(--desktop-width); /* 데스크탑 사이즈*/
   color: #ffffff;
+  background-color: #161616;
+
   border: 1px solid #ffffff;
   border-radius: 2px;
   padding: 20px 20px;
