--- a/src/components/commons/title/Title.module.css
+++ b/src/components/commons/title/Title.module.css
@@ -12,3 +12,17 @@
   background-color: inherit;
   color: #ffffff;
 }
+.titleMiddleContainer {
+  width: 100%;
+  height: 61px;
+  border-bottom: 2px solid #eeeeee;
+}
+.titleMiddle {
+  font-family: "BR B";
+  font-size: 28px;
+  font-weight: 400;
+  text-align: start;
+
+  background-color: inherit;
+  color: #ffffff;
+}
