--- a/src/components/modals/photo_selling/PhotoSellingDetail.module.css
+++ b/src/components/modals/photo_selling/PhotoSellingDetail.module.css
@@ -1,3 +1,8 @@
+/*스크롤 미구현*/
+/* .sellingDetailModal {
+  max-height: 90vh;
+  overflow-y: auto;
+} */
 .logo {
   color: #a4a4a4;
   font-size: 24px;
@@ -6,4 +11,36 @@
   text-align: start;
 
   margin-bottom: 40px;
+}
+.detailContent {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+}
+.imageWrapper {
+  width: 100%;
+}
+.cardDetailWrapper {
+  color: #ffffff;
+}
+.subTitle {
+  margin-top: 80px;
+}
+.filterWrapper {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+}
+.textareaWrapper {
+  margin-top: 30px;
+  height: 159px;
+}
+.buttonWrapper {
+  margin-top: 60px;
+  height: 60px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
 }
