--- a/src/components/imgcard_my/ImgCardMy.module.css
+++ b/src/components/imgcard_my/ImgCardMy.module.css
@@ -1,7 +1,9 @@
 .imgCard {
   width: 100%;
-  border: 1px solid #ffffff;
+  border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 2px;
+  background-color: #161616;
+
   display: flex;
   flex-direction: column;
   padding: 40px;
