Feat: 페이지 기본 작업 완료

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: "BR B";
-  src: url("../fonts/배스킨라빈스\ B.ttf");
+  src: url("./fonts/배스킨라빈스\ B.ttf");
 }
 
 /* Reset 전역 스타일 */
