--- a/src/components/commons/dropdown_normal/DropdownNormal.module.css
+++ b/src/components/commons/dropdown_normal/DropdownNormal.module.css
@@ -4,7 +4,7 @@
 }
 .normalButton {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
   border: none;
   width: var(--desktop-width);
@@ -29,6 +29,12 @@
   width: 24px;
   height: 24px;
   transition: transform 0.3s ease;
+}
+.normalButton .arrowIcon {
+  margin-left: 10px;
+}
+.borderedButton .arrowIcon {
+  margin-left: 38px;
 }
 .menuOpen {
   transform: rotate(180deg);
@@ -100,6 +106,9 @@
   }
   .borderedDropdown .buttonText {
     font-size: 14px;
+  }
+  .borderedButton .arrowIcon {
+    margin-left: 22px;
   }
 }
 
