--- a/src/components/modals/photo_selling/PhotoSelling.module.css
+++ b/src/components/modals/photo_selling/PhotoSelling.module.css
@@ -10,16 +10,38 @@
   align-items: center;
   z-index: 200;
 }
-.modalContent {
-  position: relative;
+.modalContainer {
   width: 1160px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 120px;
+  padding-right: 80px;
+
+  position: relative;
   background-color: #161616;
-  padding: 60px 120px;
+  display: flex;
+  justify-content: center;
+}
+.modalContent {
+  padding-right: 40px;
+  position: relative;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  overflow: hidden;
+
+  max-height: 90vh;
+  overflow-y: auto;
+}
+.modalContent::-webkit-scrollbar {
+  width: 8px;
+}
+.modalContent::-webkit-scrollbar-thumb {
+  background-color: #5a5a5a;
+  border-radius: 2px;
+}
+.modalContent::-webkit-scrollbar-thumb:hover {
+  background-color: #ffffff;
 }
 .closeButton {
   position: absolute;
