--- a/src/components/modals/photo_exchange/PhotoExchange.module.css
+++ b/src/components/modals/photo_exchange/PhotoExchange.module.css
@@ -23,6 +23,7 @@
   justify-content: center;
 }
 .modalContent {
+  width: 100%;
   padding-right: 40px;
   position: relative;
   border-radius: 2px;
@@ -61,6 +62,9 @@
     background-color: #ffffff;
   }
 }
+.mainWrapper {
+  width: 100%;
+}
 .logo {
   color: #a4a4a4;
   font-size: 24px;
@@ -85,10 +89,10 @@
   gap: 45px;
 }
 .imageCardContainer {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 40px;
-  overflow-y: auto; /*임시 세로 스크롤*/
   &:hover {
     cursor: pointer;
   }
@@ -96,6 +100,8 @@
 @media (max-width: 1199px) {
   .modalContent {
     padding: 15px 20px;
-    width: 100vw;
+  }
+  .modalContent::-webkit-scrollbar {
+    display: none;
   }
 }
