--- a/src/components/modals/photo_selling/PhotoSelling.module.css
+++ b/src/components/modals/photo_selling/PhotoSelling.module.css
@@ -61,6 +61,9 @@
     background-color: #ffffff;
   }
 }
+.mainWrapper {
+  width: 100%;
+}
 .logo {
   color: #a4a4a4;
   font-size: 24px;
@@ -85,10 +88,10 @@
   gap: 45px;
 }
 .imageCardContainer {
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 40px;
-  overflow-y: auto; /*임시 세로 스크롤*/
   &:hover {
     cursor: pointer;
   }
