--- a/src/components/modals/photo_selling/PhotoSellingDetail.module.css
+++ b/src/components/modals/photo_selling/PhotoSellingDetail.module.css
@@ -1,8 +1,6 @@
-/*스크롤 미구현*/
-/* .sellingDetailModal {
-  max-height: 90vh;
-  overflow-y: auto;
-} */
+.sellingDetailModal {
+  width: 100%;
+}
 .logo {
   color: #a4a4a4;
   font-size: 24px;
