style: 모달 드래그 미구현, 일단 클릭으로 해놓음

--- a/src/components/modals/photo_exchange/PhotoExchange.module.css
+++ b/src/components/modals/photo_exchange/PhotoExchange.module.css
@@ -62,6 +62,9 @@
     background-color: #ffffff;
   }
 }
+.dragZone {
+  display: none;
+}
 .mainWrapper {
   width: 100%;
 }
@@ -98,10 +101,25 @@
   }
 }
 @media (max-width: 1199px) {
+  .modalContainer {
+    width: 100vw;
+  }
   .modalContent {
+    width: 100%;
     padding: 15px 20px;
   }
   .modalContent::-webkit-scrollbar {
     display: none;
+  }
+  .closeButton {
+    display: none;
+  }
+  .dragZone {
+    display: block;
+    position: absolute;
+    top: 15px;
+    &:hover {
+      cursor: pointer;
+    }
   }
 }
