--- a/src/components/modals/profile/profile.module.css
+++ b/src/components/modals/profile/profile.module.css
@@ -11,6 +11,9 @@
     right: 85px;
     z-index: 1;
   }
+  .profile_Wrapper.close {
+    display: none;
+  }
   .profile_Container {
     display: flex;
     flex-direction: column;
@@ -95,6 +98,9 @@
     top: 24px;
     right: 70px;
     z-index: 1;
+  }
+  .profile_Wrapper.close {
+    display: none;
   }
 
   .profile_Container {
@@ -182,6 +188,9 @@
     left: 0;
     right: 0;
     z-index: 1;
+  }
+  .profile_Wrapper.close {
+    display: none;
   }
 
   .profile_Container {
