style: 모바일 사이즈 filter 배치 변경

--- a/src/components/modals/photo_selling/PhotoSelling.module.css
+++ b/src/components/modals/photo_selling/PhotoSelling.module.css
@@ -140,9 +140,14 @@
   }
   .filter {
     gap: 10px;
+    justify-content: space-between;
   }
   .filterWrapper {
+    order: -1;
     gap: 10px;
+  }
+  .searchBarWrapper {
+    width: 100%;
   }
   .imageCardContainer {
     gap: 5px;
