--- a/src/components/modals/photo_exchange/PhotoExchange.module.css
+++ b/src/components/modals/photo_exchange/PhotoExchange.module.css
@@ -144,7 +144,11 @@
     justify-content: space-between;
   }
   .filterWrapper {
+    order: -1;
     gap: 10px;
+  }
+  .searchBarWrapper {
+    width: 100%;
   }
   .imageCardContainer {
     gap: 5px;
