style: 태블릿 사이즈 이하 모달 하단 고정

--- a/src/components/modals/photo_selling/PhotoSelling.module.css
+++ b/src/components/modals/photo_selling/PhotoSelling.module.css
@@ -135,8 +135,12 @@
 }
 @media (max-width: 743px) {
   .modalContainer {
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 0;
   }
   .filter {
     gap: 10px;
