--- a/src/components/modals/photo_exchange/PhotoExchange.module.css
+++ b/src/components/modals/photo_exchange/PhotoExchange.module.css
@@ -102,9 +102,12 @@
 }
 @media (max-width: 1199px) {
   .modalContainer {
+    position: fixed;
     width: 100vw;
+    bottom: 0;
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 0;
   }
   .modalContent {
     width: 100%;
