style: 모달 모바일 사이즈 작업

--- a/src/components/imgcard_my/ImgCardMy.module.css
+++ b/src/components/imgcard_my/ImgCardMy.module.css
@@ -115,12 +115,11 @@
     margin-bottom: 30px;
   }
 }
-@media (max-width: 743px) {
+/* @media (max-width: 743px) {
   .imgCard {
     padding: 10px;
   }
   .cardContent {
-    margin-top: 10px;
     margin-bottom: 0;
   }
   .cardTitle {
@@ -138,4 +137,4 @@
   .logoImage {
     display: none;
   }
-}
+} */
