--- a/src/components/modals/photo_selling/PhotoSellingDetail.module.css
+++ b/src/components/modals/photo_selling/PhotoSellingDetail.module.css
@@ -46,10 +46,22 @@
   gap: 20px;
 }
 @media (max-width: 743px) {
+  .logo {
+    text-align: center;
+    color: #ffffff;
+    padding-top: 5px;
+  }
   .sellingDetailModal {
     width: 100%;
   }
   .detailContent {
     grid-template-columns: 1fr;
+  }
+  .filterWrapper {
+    grid-template-columns: 1fr;
+    gap: 30px;
+  }
+  .buttonWrapper {
+    margin-top: 40px;
   }
 }
