--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -15,6 +15,7 @@
 
     position: absolute;
     top: 0;
+    left: 0;
   }
   .nav_Container {
     display: flex;
@@ -111,6 +112,7 @@
 
     position: absolute;
     top: 0;
+    left: 0;
   }
   .nav_Container {
     display: flex;
@@ -199,6 +201,7 @@
     align-items: center;
 
     width: 100%;
+    min-width: 100vw;
     height: 70px;
 
     box-sizing: border-box;
@@ -209,6 +212,7 @@
 
     position: absolute;
     top: 0;
+    left: 0;
   }
   .nav_Container {
     display: flex;
@@ -265,47 +269,4 @@
   .nav_item_container.notLogin {
     display: none;
   }
-}
-.nav_myPage_Wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 100%;
-  height: 70px;
-
-  box-sizing: border-box;
-  padding-left: 20px;
-  padding-right: 20px;
-
-  background-color: #0f0f0f;
-}
-.nav_myPage_Container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  width: 100%;
-  max-width: 335px;
-  height: 22px;
-
-  background-color: #0f0f0f;
-
-  box-sizing: border-box;
-
-  position: relative;
-}
-
-.nav_myPage_back {
-  width: 22px;
-  height: 22px;
-  top: 0;
-  left: 0;
-
-  position: absolute;
-}
-
-.nav_myPage_logo {
-  width: 83.37px;
-  height: 15.12px;
 }
