--- a/src/page/layout/nav/navLayout.module.css
+++ b/src/page/layout/nav/navLayout.module.css
@@ -1,10 +1,30 @@
-.layout_Wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media screen and (min-width: 745px) {
+  .layout_Wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  width: 100%;
-  min-height: 100vh;
+    width: 100%;
+    min-height: 100vh;
 
-  background-color: #0f0f0f;
+    background-color: #0f0f0f;
+
+    box-sizing: border-box;
+    margin-top: 80px;
+  }
+}
+@media screen and (max-width: 744px) {
+  .layout_Wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    min-height: 100vh;
+
+    background-color: #0f0f0f;
+
+    box-sizing: border-box;
+    margin-top: 70px;
+  }
 }
