--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -39,6 +39,7 @@
 
   .nav_item_container {
     display: flex;
+    align-items: center;
     width: 281px;
     height: 24px;
     gap: 30px;
@@ -75,6 +76,8 @@
     font-family: "BR B";
 
     color: #dddddd;
+
+    cursor: pointer;
   }
   .nav_itme_logout {
     font-size: 0.875rem;
@@ -82,6 +85,7 @@
     line-height: 20.27px;
 
     color: #5a5a5a;
+    cursor: pointer;
   }
 
   .nav_item_text {
@@ -173,6 +177,7 @@
     font-family: "BR B";
 
     color: #dddddd;
+    cursor: pointer;
   }
   .nav_itme_logout {
     font-size: 0.875rem;
@@ -180,6 +185,8 @@
     line-height: 20.27px;
 
     color: #5a5a5a;
+
+    cursor: pointer;
   }
 
   .nav_item_text {
