--- a/src/page/mygallery/index.module.css
+++ b/src/page/mygallery/index.module.css
@@ -121,13 +121,18 @@
 }
 
 .sectionPhotoList {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  justify-content: space-between;
+  grid-template-columns: repeat(3, minmax(300px, 440px));
   gap: 80px 20px;
 }
 
-.boxSize {
-  max-width: 440px;
+@media (max-width: 1200px) {
+  .sectionPhotoList {
+    gap: 40px 20px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -148,5 +153,12 @@
 
   .searchBarSize {
     max-width: 200px;
+  }
+}
+
+@media (max-width: 425px) {
+  .sectionPhotoList {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 20px 20px;
   }
 }
