feat: 포토카드  생성하기 페이지 추가

--- a/src/components/commons/input_normal/inputTextfield.css
+++ b/src/components/commons/input_normal/inputTextfield.css
@@ -45,3 +45,9 @@
   line-height: 23.17px;
   color: #ff483d;
 }
+
+.normal {
+  text-align: start;
+  text-indent: 8px;
+  background-color: #0f0f0f;
+}
