--- a/src/page/buyer_detail/index.module.css
+++ b/src/page/buyer_detail/index.module.css
@@ -12,6 +12,12 @@
   padding-top: 60px;
   padding-bottom: 180px;
 }
+.header {
+  width: 100%;
+}
+.backIcon {
+  display: none;
+}
 .logo {
   font-family: "BR B";
   font-size: 24px;
@@ -80,4 +86,46 @@
 .exchangeGenre {
   padding-left: 15px;
   color: #a4a4a4;
+}
+@media (max-width: 1199px) {
+  .contentContainer {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .buttonWrapper {
+    width: 342px;
+  }
+}
+@media (max-width: 743px) {
+  .header {
+    display: flex;
+    justify-content: center;
+    height: 70px;
+    padding-top: 20px;
+
+    background-color: #0f0f0f;
+    position: absolute;
+    top: 0;
+    z-index: 100;
+  }
+  .backIcon {
+    display: block;
+    position: absolute;
+    left: 20px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  .logo {
+    color: #ffffff;
+  }
+  .contentContainer {
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  .buttonWrapper {
+    width: 100%;
+    left: 0;
+    top: 240px;
+  }
 }
