--- a/src/feature/shop_card/ShopCardRender.module.css
+++ b/src/feature/shop_card/ShopCardRender.module.css
@@ -1,7 +1,9 @@
 .listRenderContainer {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 80px 20px;
+  grid-template-columns: repeat(3, minmax(300px, 440px)); /* 3개의 카드 */
+  justify-content: space-between;
+  width: 100%; /* 부모 컨테이너의 너비 */
+  gap: 80px 30px;
 }
 
 .loading {
@@ -12,4 +14,10 @@
 .loadMore {
   width: 100%;
   height: 1000px;
+}
+
+@media (max-width: 1400px) {
+  .listRenderContainer {
+    gap: 50px 30px;
+  }
 }
