--- a/src/page/seller_detail/index.module.css
+++ b/src/page/seller_detail/index.module.css
@@ -61,6 +61,7 @@
     gap: 20px;
   }
   .exchangeCardsContainer {
+    margin-top: 40px;
     grid-template-columns: repeat(2, 1fr);
     gap: 20px;
   }
