--- a/src/components/modals/confirm/PurchaseConfirm.module.css
+++ b/src/components/modals/confirm/PurchaseConfirm.module.css
@@ -1,3 +1,15 @@
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5); /* 어두운 배경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 300;
+}
 .container {
   position: relative;
   max-width: 560px;
@@ -9,6 +21,7 @@
   justify-content: center;
   align-items: center;
   background-color: #161616;
+  z-index: 400;
 }
 
 .closeIcon {
