--- a/src/components/common/btn/primaryBtn.css
+++ b/src/components/common/btn/primaryBtn.css
@@ -14,6 +14,10 @@
 
   background-color: #efff04;
   border-radius: 2px;
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .primary_btn_container.alt {
