--- a/src/page/market/index.module.css
+++ b/src/page/market/index.module.css
@@ -1,6 +1,10 @@
 main {
   padding: 0px 20px;
   width: 1480px;
+  height: 100vh;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: flex-start; */
 }
 
 .sectionFilter {
