--- a/src/feature/shop_card/ShopCardRender.module.css
+++ b/src/feature/shop_card/ShopCardRender.module.css
@@ -3,7 +3,7 @@
   grid-template-columns: repeat(3, minmax(300px, 440px)); /* 3개의 카드 */
   justify-content: space-between;
   width: 100%; /* 부모 컨테이너의 너비 */
-  gap: 80px 30px;
+  gap: 2000px 30px;
 }
 
 .loading {
@@ -11,9 +11,16 @@
   color: azure;
 }
 
-.loadMore {
+.errorContainer {
   width: 100%;
-  height: 1000px;
+  height: 800px;
+  font-size: 5rem;
+  color: azure;
+}
+
+.space {
+  width: 100%;
+  height: 300px;
 }
 
 @media (max-width: 1400px) {
