--- a/src/components/modals/photo_modify/PhotoModifyDetail.module.css
+++ b/src/components/modals/photo_modify/PhotoModifyDetail.module.css
@@ -40,6 +40,7 @@
 }
 .buttonWrapper {
   margin-top: 60px;
+  margin-bottom: 60px;
   height: 60px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
