--- a/src/feature/card_sale_regist/MarketActionHeader.module.css
+++ b/src/feature/card_sale_regist/MarketActionHeader.module.css
@@ -1,3 +1,16 @@
+.outSide {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.8); /* 배경을 반투명 처리 */
+  z-index: 1000; /* 다른 요소들보다 위에 표시되도록 설정 */
+}
+
 .header {
   width: 100%;
   padding: 60px 0px 20px 0px;
