--- a/src/feature/shop_filter/sort/buttonStyle.module.css
+++ b/src/feature/shop_filter/sort/buttonStyle.module.css
@@ -2,12 +2,13 @@
   display: flex;
   position: relative;
 }
-.normalButton {
-  display: flex;
-  align-items: center;
-  border: none;
-  width: var(--desktop-width);
+.borderButton {
+  width: 180px;
   height: var(--desktop-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid #DDDDDD;
   background-color: inherit;
   color: #ffffff;
   padding: 10px 10px 10px 20px;
@@ -15,7 +16,6 @@
   font-weight: 700;
   &:hover {
     cursor: pointer;
-    border-radius: 10px;
     background-color: #4b4b4b;
   }
 }
