--- a/src/components/imgcard_exchange_my/ImgCardExchangeMy.module.css
+++ b/src/components/imgcard_exchange_my/ImgCardExchangeMy.module.css
@@ -119,6 +119,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  .cardGrade {
+    text-align: start;
+  }
   .cardGenre {
     margin-right: auto;
   }
