style: seller-detail 페이지의 반응형 디자인 수정

--- a/src/components/imgcard_exchange/ImgCardExchange.module.css
+++ b/src/components/imgcard_exchange/ImgCardExchange.module.css
@@ -121,6 +121,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  .cardGrade {
+    text-align: start;
+  }
   .cardGenre {
     margin-right: auto;
   }
