--- a/src/page/seller_detail/index.module.css
+++ b/src/page/seller_detail/index.module.css
@@ -67,6 +67,9 @@
   }
 }
 @media (max-width: 743px) {
+  .mainContainer {
+    padding-top: 0px;
+  }
   .header {
     display: flex;
     justify-content: center;
