chore: 상세페이지 로고, back 아이콘 클릭시 홈 리다이렉트 추가

--- a/src/page/buyer_detail/index.module.css
+++ b/src/page/buyer_detail/index.module.css
@@ -24,6 +24,9 @@
   font-weight: 400;
   color: #a4a4a4;
   text-align: start;
+  &:hover {
+    cursor: pointer;
+  }
 }
 .detailContent {
   margin-top: 60px;
