--- a/src/feature/nav/nav.module.css
+++ b/src/feature/nav/nav.module.css
@@ -35,6 +35,7 @@
   .nav_logo {
     width: 138.94px;
     height: 25.2px;
+    cursor: pointer;
   }
 
   .nav_item_container {
@@ -50,12 +51,40 @@
 
     position: relative;
   }
+
   .nav_item_point {
     font-size: 0.875rem;
     font-weight: 700;
     line-height: 20.27px;
 
     color: #dddddd;
+  }
+  .nav_item_notice_Container {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    position: relative;
+  }
+  .nav_item_notice_count {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 8px;
+    height: 8px;
+    background-color: #ff483d;
+    position: absolute;
+    left: 16px;
+
+    font-size: 0.375rem;
+    font-weight: 700;
+    line-height: 8.69px;
+
+    color: #ffffff;
+
+    border-radius: 100%;
+  }
+  .nav_item_notice_count.none {
+    display: none;
   }
   .nav_item_notice {
     width: 24px;
@@ -142,6 +171,7 @@
   .nav_logo {
     width: 111px;
     height: 20px;
+    cursor: pointer;
   }
 
   .nav_item_container {
@@ -162,7 +192,36 @@
     line-height: 20.27px;
 
     color: #dddddd;
+    position: relative;
   }
+  .nav_item_notice_Container {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    position: relative;
+  }
+  .nav_item_notice_count {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 8px;
+    height: 8px;
+    background-color: #ff483d;
+    position: absolute;
+    left: 16px;
+
+    font-size: 0.375rem;
+    font-weight: 700;
+    line-height: 8.69px;
+
+    color: #ffffff;
+
+    border-radius: 100%;
+  }
+  .nav_item_notice_count.none {
+    display: none;
+  }
+
   .nav_item_notice {
     width: 24px;
     height: 24px;
@@ -253,18 +312,40 @@
   .nav_logo {
     width: 83.37px;
     height: 15.12px;
+    cursor: pointer;
   }
 
-  .nav_item_container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 22px;
-    height: 22px;
-  }
   .nav_item_point {
     display: none;
   }
+  .nav_item_notice_Container {
+    width: 22px;
+    height: 22px;
+    cursor: pointer;
+    position: relative;
+  }
+  .nav_item_notice_count {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6px;
+    height: 6px;
+    background-color: #ff483d;
+    position: absolute;
+    left: 18px;
+
+    font-size: 0.375rem;
+    font-weight: 700;
+    line-height: 8.69px;
+
+    color: #ffffff;
+
+    border-radius: 100%;
+  }
+  .nav_item_notice_count.none {
+    display: none;
+  }
+
   .nav_item_notice {
     width: 22px;
     height: 22px;
