--- a/src/components/imgcard_exchange_my/ImgCardExchangeMy.module.css
+++ b/src/components/imgcard_exchange_my/ImgCardExchangeMy.module.css
@@ -11,12 +11,16 @@
 }
 .imgCardWrapper {
   position: relative;
-  width: 100%;
-  height: auto;
+  aspect-ratio: 4 / 3;
+  height: 100%;
+  max-height: 270px;
+  overflow: hidden;
+  background-color: #161616;
 }
 .cardImage {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
 }
 .cardContent {
   margin-top: 25px;
