--- a/src/styles/CardListRenderStyle.module.css
+++ b/src/styles/CardListRenderStyle.module.css
@@ -6,6 +6,14 @@
   gap: 80px 30px;
 }
 
+.listRenderOnMoalContainer {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(300px, 440px)); /* 3개의 카드 */
+  justify-content: space-between;
+  width: 100%; /* 부모 컨테이너의 너비 */
+  gap: 80px 20px;
+}
+
 .loading {
   font-size: 10rem;
   color: azure;
