--- a/src/components/modals/photo_exchange/PhotoExchange.module.css
+++ b/src/components/modals/photo_exchange/PhotoExchange.module.css
@@ -174,7 +174,7 @@
     width: 100%;
   }
   .imageCardContainer {
-    gap: 5px;
+    grid-template-columns: 1fr;
   }
   /*상세보기 모바일사이즈*/
   .mobileDetailContainer {
